Version 0.1a4
-------------

  * Replaced separate settings for the directory to download checklist to by
    a single setting, CHECKLISTING_DOWNLOADS_DIR that is used by all spiders.
  * Added version and language attributes to the JSON format files containing
    the downloaded checklist.
  * Checklist files now contain ints and floats for numbers and coordinates.
  * Protocols are defined using a name rather than a pre-defined code. This
    avoids making assumptions on where and how the data will be loaded.
  * Species records now contain only two fields: name and scientific_name.

Version 0.1a3
-------------

  * Login failures on the WorldBirds spider now raises a LoginException.
  * Added an extension to record spider errors. Updated the status report to
    include errors.
  * Added a status report which is generated and emailed when a spider closes.
  * Added support for local_settings.py to override scrapy settings.
  * Added a spider for downloading checklists for WorldBirds.


Version 0.1a2
-------------

  * Fixed the problem of checklists getting assigned to the wrong response by
    limiting the number of simultaneous requests.
  * Simplified the arguments used to initialize the eBird spider by moving
    semi-static ones into the settings file.


Version 0.1a1
-------------

  * Initial version with working spider downloading checklists from eBird.